Corregí un error de escritura de una propiedad (margin-right y margin-left)

--- a/styles/banners-starbucks.css
+++ b/styles/banners-starbucks.css
@@ -6,8 +6,8 @@ main{
 
 .fila{
     display: block;
-    margin left: 0;
-    margin right: 0;
+    margin-left: 0;
+    margin-right: 0;
     flex-wrap: wrap;
 }
 
